--- a/task3.html
+++ b/task3.html
@@ -1,4 +1,4 @@
-<html>
+i<html>
 	<head>
 		<title> HOMEPAGE </title>
 		<link rel="stylesheet" type="text/css" href="task3.css" >
@@ -15,12 +15,11 @@
 		<img class="p1" id="imgs" src="https://mc.webpcache.epapr.in/mcms.php?size=medium&in=https://mcmscache.epapr.in/post_images/website_154/post_19142173/thumb.jpg">
 		
 		
-		
-		<h1 class="p1"> PENNY LESS POUND WORTHY </h1>
-		
+				<h1 class="p1"> PENNY LESS POUND WORTHY </h1>
 		
 		
-		<a class="p2" target="_blank" href="https://www.google.com/search?q=suriya+aakasam+nee+haddura&client=firefox-b-d&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiugOj11OfzAhWZbSsKHdnNCJ8Q_AUoAnoECAEQBA&biw=1440&bih=775&dpr=1#imgrc=ocXfN3rI1SvQEM&imgdii=OHeVRA656Y1LBM"> SURIYA </a>
+		
+		<a class="p2" target="_blank" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2Fawscloud&psig=AOvVaw2fl5jrcb7c4l9wPlG-yNP9&ust=1677160615567000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCJj8rKikqf0CFQAAAAAdAAAAABAI"> SURIYA </a>
 		
 		<p class="p2">The film was partly inspired by events from the life of Simplifly Deccan founder G. R. Gopinath. While the project was announced in mid-2018, under the working title Suriya 38, the official title Soorarai Pottru was announced on 13 April 2019. Principal photography began the very same month and ended that September. Filming took place across Madurai, Chennai, and Chandigarh. The film features music composed by G. V. Prakash Kumar, while cinematography and editing were handled by Niketh Bommireddy and Sathish Suriya respectively.</p>
 		
